core/src/components/input/input.md.scss
@import "./input";
@import "./input.md.vars";


// Material Design Input
// --------------------------------------------------

:host {
  --padding-top: #{$input-md-padding-top};
  --padding-end: #{$input-md-padding-end};
  --padding-bottom: #{$input-md-padding-bottom};
  --padding-start: #{$input-md-padding-start};

  font-size: $input-md-font-size;
}

:host-context(.item-label-stacked),
:host-context(.item-label-floating) {
  --padding-top: 8px;
  --padding-bottom: 8px;
  --padding-start: 0;
}

.input-clear-icon ion-icon {
  width: 24px;
  height: 24px;
}

