fix(input): use closeSharp to align with searchbar

--- a/core/src/components/input/input.md.scss
+++ b/core/src/components/input/input.md.scss
@@ -22,6 +22,6 @@
 }
 
 .input-clear-icon ion-icon {
-  width: 24px;
-  height: 24px;
+  width: 22px;
+  height: 22px;
 }
